// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic logging 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {},
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`basic logging with context and payload 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "country": "uk",
      "foo": "baz",
    },
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`basic logging with payload 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "foo": "bar",
    },
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`child logger with context and payload 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
      "hello": "world",
      "meh": true,
    },
    "level": 2,
    "logger": "testing:testchild",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for debug 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 3,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for error 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 0,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for info 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 2,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`provides sugar api for warning 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "cool": true,
      "foo": "baz",
    },
    "level": 1,
    "logger": "testing",
    "msg": "hello world",
    "time": 1514764800000,
  },
]
`;

exports[`respects serializable errors 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "error": Object {
        "name": "serializable error",
        "stack": "nothing to report",
      },
    },
    "level": 2,
    "logger": "testing",
    "msg": "fail whale",
    "time": 1514764800000,
  },
]
`;

exports[`serialized basic errors 1`] = `
Array [
  Object {
    "__f": "logbang:1",
    "ctx": Object {
      "error": Object {
        "message": "oops",
        "name": "Error",
        "stack": "deterministic stack
at line 1
at line 2",
      },
    },
    "level": 2,
    "logger": "testing",
    "msg": "fail whale",
    "time": 1514764800000,
  },
]
`;
